[gd_scene load_steps=14 format=3 uid="uid://ogbgrgwuqww5"]

[ext_resource type="Texture2D" uid="uid://47sb3q7iwu27" path="res://textures/UI/main_menu_bg.png" id="1_qwnig"]
[ext_resource type="Theme" uid="uid://burtlrkgl63lg" path="res://ui/main_theme.tres" id="1_yonvy"]
[ext_resource type="Script" uid="uid://df3auqdfdboj1" path="res://scenes/UI/main_menu.gd" id="2_tfcbk"]
[ext_resource type="FontFile" uid="uid://bpbxeqck4mvha" path="res://ui/fonts/upheavtt.ttf" id="3_5jstl"]
[ext_resource type="PackedScene" uid="uid://by3v0a2t44smh" path="res://scenes/UI/options_menu.tscn" id="5_e2p27"]
[ext_resource type="AudioStream" uid="uid://k61e757lhigq" path="res://audio/SFX/hit_hurt.wav" id="6_ngj32"]
[ext_resource type="AudioStream" uid="uid://ug4827jwrsys" path="res://audio/music/ui/hammer_of_justice.wav" id="7_bm8t2"]
[ext_resource type="Texture2D" uid="uid://bql312u8ubupg" path="res://textures/UI/music.png" id="8_um6dh"]
[ext_resource type="FontFile" uid="uid://dig053nwgpxcp" path="res://ui/fonts/m5x7.ttf" id="9_mf7fl"]

[sub_resource type="LabelSettings" id="LabelSettings_um6dh"]
font = ExtResource("3_5jstl")
font_size = 60
outline_size = 30
outline_color = Color(0.66, 0, 0.17599984, 1)
shadow_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_tfcbk"]
font = ExtResource("3_5jstl")
font_size = 140
outline_size = 70
outline_color = Color(0.16, 0.16, 0.16, 1)
shadow_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_ngj32"]
font_size = 33
outline_size = 17
outline_color = Color(0.16078432, 0.16078432, 0.16078432, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d6l81"]
font = ExtResource("9_mf7fl")
font_size = 48
outline_size = 24
outline_color = Color(0.16078432, 0.16078432, 0.16078432, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yonvy")
script = ExtResource("2_tfcbk")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qwnig")

[node name="Label" type="Label" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -169.0
offset_right = 226.5
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
text = "DEsperado"
label_settings = SubResource("LabelSettings_um6dh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -612.5
offset_top = 157.0
offset_right = 612.5
offset_bottom = 375.0
grow_horizontal = 2
text = "Bullet Hell Engine"
label_settings = SubResource("LabelSettings_tfcbk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -42.0
offset_right = 218.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="PlayDesperado" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = " Desperado "

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("5_e2p27")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 1
default_bgm_volume = 0.8

[node name="CreditsContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -30.5
offset_right = 217.0
offset_bottom = 278.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Art" type="Label" parent="CreditsContainer"]
layout_mode = 2
text = "Art: Quiet"
label_settings = SubResource("LabelSettings_ngj32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Programming" type="Label" parent="CreditsContainer"]
layout_mode = 2
text = "Programming: Carbon"
label_settings = SubResource("LabelSettings_ngj32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Label" parent="CreditsContainer"]
layout_mode = 2
text = "SFX: Carbon"
label_settings = SubResource("LabelSettings_ngj32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGM" type="Label" parent="CreditsContainer"]
layout_mode = 2
text = "BGM: Shaula_Music, 
     igorsantusa,
Toby Fox"
label_settings = SubResource("LabelSettings_ngj32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGM2" type="Label" parent="CreditsContainer"]
layout_mode = 2
text = "(All music \"borrowed\")"
label_settings = SubResource("LabelSettings_ngj32")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CreditsContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="BackButton" type="Button" parent="CreditsContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
disabled = true
text = "RETURN"

[node name="SFXTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ngj32")
bus = &"SFX"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bm8t2")
autoplay = true
bus = &"BGM"

[node name="MusicCredits" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 916.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MusicCredits"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="MusicCredits/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MusicIcon" type="TextureRect" parent="MusicCredits/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_um6dh")
expand_mode = 2

[node name="Control" type="Control" parent="MusicCredits/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="MusicCredit" type="Label" parent="MusicCredits/HBoxContainer"]
z_index = -1
layout_mode = 2
text = "igorsantusa - Hammer of Justice"
label_settings = SubResource("LabelSettings_d6l81")

[node name="Control" type="Control" parent="MusicCredits"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayDesperado" to="." method="_on_play_desperado_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="options_closed" from="OptionsMenu" to="." method="_on_options_menu_options_closed"]
[connection signal="pressed" from="CreditsContainer/BackButton" to="." method="_on_back_button_pressed"]
